[gd_scene load_steps=32 format=3 uid="uid://c6qut1teuwudk"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_oqj31"]
[ext_resource type="Texture2D" uid="uid://b3snpv6xmdfma" path="res://Assets/sliderBtn.png" id="2_8wuif"]
[ext_resource type="Script" path="res://Scripts/SettingsMenu.gd" id="2_dif4n"]
[ext_resource type="PackedScene" uid="uid://c6n5p8l5rren5" path="res://Prefabs/audio_visualizer.tscn" id="2_i2jmd"]
[ext_resource type="Texture2D" uid="uid://wgya4icmuy3d" path="res://Assets/sliderBtnn.png" id="3_dpxxq"]
[ext_resource type="Texture2D" uid="uid://5gpbmcbv3n0t" path="res://Assets/circle.png" id="3_m1d8i"]
[ext_resource type="Texture2D" uid="uid://dgfixpr1d5e6o" path="res://Assets/ButtonMainMenu.png" id="4_e4w24"]
[ext_resource type="Texture2D" uid="uid://bvhagsj1wllfi" path="res://Assets/circleinner.png" id="4_jsqoh"]
[ext_resource type="Texture2D" uid="uid://b68w2fwadn324" path="res://Assets/ButtonMainMenuHover.png" id="5_ernjd"]
[ext_resource type="PackedScene" uid="uid://dmj3dvw2qrrx6" path="res://Prefabs/transition.tscn" id="5_sunvn"]
[ext_resource type="Script" path="res://Scripts/SFX.gd" id="9_nrjcv"]
[ext_resource type="Texture2D" uid="uid://dkjwdctclt71s" path="res://Assets/greencircle.png" id="9_nscxd"]
[ext_resource type="Texture2D" uid="uid://bif4whfcjx85w" path="res://Assets/cross.png" id="10_wteo5"]
[ext_resource type="Texture2D" uid="uid://b53cmh6todkk" path="res://Assets/star.png" id="11_00ocf"]
[ext_resource type="Texture2D" uid="uid://c8eaxm6vrv7df" path="res://Assets/stars-2643089_1920.jpg" id="11_6wrgr"]
[ext_resource type="PackedScene" uid="uid://l1deg16sx81j" path="res://Prefabs/BlackHole.tscn" id="14_2vgnf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_74css"]
bg_color = Color(0.1741, 0.358487, 1, 1)
border_width_bottom = 10
border_color = Color(0.0608965, 4.81308e-08, 0.423722, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
corner_detail = 10
shadow_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_38s8s"]
bg_color = Color(1.92523e-07, 0.599222, 0.92318, 1)
border_width_bottom = 10
border_color = Color(0.0706859, 0, 0.501943, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
corner_detail = 10
shadow_size = 10
shadow_offset = Vector2(0, 2.5)

[sub_resource type="Theme" id="Theme_mg802"]
Button/colors/font_color = Color(0, 0.586416, 0.881886, 1)
Button/colors/font_hover_color = Color(0.814449, 0.842116, 0.999998, 1)
Button/font_sizes/font_size = 60
Button/styles/hover = SubResource("StyleBoxFlat_74css")
Button/styles/normal = SubResource("StyleBoxFlat_38s8s")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_er1bg"]
texture = ExtResource("4_e4w24")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0uidp"]
texture = ExtResource("5_ernjd")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pufor"]
bg_color = Color(0.219608, 0, 0.372549, 1)
border_width_right = 5
border_width_bottom = 15
border_color = Color(0.027451, 0.0823529, 0.286275, 1)
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 15.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_32shs"]
content_margin_left = 500.0
content_margin_top = 30.0
bg_color = Color(0, 0, 0, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ds4v"]
bg_color = Color(6.01634e-09, 0.163143, 0.0586826, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0rbjs"]
bg_color = Color(7.21961e-07, 0.321488, 0.196136, 1)
corner_radius_top_left = 1024
corner_radius_bottom_left = 1024

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_om3nx"]
texture = ExtResource("4_e4w24")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f3f3q"]
texture = ExtResource("5_ernjd")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cdsw3"]
texture = ExtResource("4_e4w24")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1gb3w"]
texture = ExtResource("5_ernjd")

[sub_resource type="Curve" id="Curve_m50uh"]
_data = [Vector2(0, 1), 0.0, -2.38127, 0, 0, Vector2(0.685393, 0.483516), 1.17363, 1.17363, 0, 0, Vector2(1, 0), -0.34392, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_ji7bp"]
offsets = PackedFloat32Array(0.00666667, 1)
colors = PackedColorArray(1, 1, 0.701961, 0.784314, 1, 1, 1, 0.784314)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oqj31")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
position_smoothing_enabled = true
position_smoothing_speed = 7.0

[node name="VolumeBar" type="TextureProgressBar" parent="Camera2D"]
visible = false
z_index = 1
offset_left = 1819.0
offset_top = 979.0
offset_right = 1920.0
offset_bottom = 1080.0
min_value = -80.0
max_value = 24.0
value = -80.0
fill_mode = 4
texture_under = ExtResource("3_m1d8i")
texture_progress = ExtResource("4_jsqoh")

[node name="Buttons" type="Node" parent="."]

[node name="PlayBtn" type="Button" parent="Buttons"]
top_level = true
offset_left = 660.0
offset_top = 100.0
offset_right = 1260.0
offset_bottom = 250.0
pivot_offset = Vector2(250, 0)
focus_mode = 0
theme = SubResource("Theme_mg802")
theme_override_styles/normal = SubResource("StyleBoxTexture_er1bg")
theme_override_styles/hover = SubResource("StyleBoxTexture_0uidp")
text = "Play"

[node name="EditBtn" type="Button" parent="Buttons"]
top_level = true
offset_left = 660.0
offset_top = 300.0
offset_right = 1260.0
offset_bottom = 450.0
pivot_offset = Vector2(250, 0)
focus_mode = 0
theme = SubResource("Theme_mg802")
theme_override_styles/normal = SubResource("StyleBoxTexture_er1bg")
theme_override_styles/hover = SubResource("StyleBoxTexture_0uidp")
text = "Edit"

[node name="SettingsBtn" type="Button" parent="Buttons"]
top_level = true
offset_left = 660.0
offset_top = 500.0
offset_right = 1260.0
offset_bottom = 650.0
pivot_offset = Vector2(250, 0)
focus_mode = 0
theme = SubResource("Theme_mg802")
theme_override_styles/normal = SubResource("StyleBoxTexture_er1bg")
theme_override_styles/hover = SubResource("StyleBoxTexture_0uidp")
text = "Settings"

[node name="QuitBtn" type="Button" parent="Buttons"]
top_level = true
offset_left = 660.0
offset_top = 700.0
offset_right = 1260.0
offset_bottom = 850.0
pivot_offset = Vector2(250, 0)
focus_mode = 0
theme = SubResource("Theme_mg802")
theme_override_styles/normal = SubResource("StyleBoxTexture_er1bg")
theme_override_styles/hover = SubResource("StyleBoxTexture_0uidp")
text = "Quit"

[node name="SettingsMenu" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_dif4n")

[node name="PanelContainer" type="PanelContainer" parent="SettingsMenu"]
z_index = 1
layout_mode = 0
offset_left = 2020.0
offset_top = 100.0
offset_right = 2520.0
offset_bottom = 164.0
theme_override_styles/panel = SubResource("StyleBoxFlat_pufor")

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label3" type="Label" parent="SettingsMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.584314, 0.882353, 1)
theme_override_font_sizes/font_size = 56
text = "Master Volume"
horizontal_alignment = 1

[node name="MasterSlider" type="HSlider" parent="SettingsMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_icons/grabber = ExtResource("3_dpxxq")
theme_override_icons/grabber_highlight = ExtResource("2_8wuif")
theme_override_icons/grabber_disabled = ExtResource("3_dpxxq")
theme_override_styles/slider = SubResource("StyleBoxFlat_32shs")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_7ds4v")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_0rbjs")
min_value = -80.0
max_value = 24.0
value = -80.0

[node name="Label" type="Label" parent="SettingsMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.584314, 0.882353, 1)
theme_override_font_sizes/font_size = 56
text = "Music Volume"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="SettingsMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_icons/grabber = ExtResource("3_dpxxq")
theme_override_icons/grabber_highlight = ExtResource("2_8wuif")
theme_override_icons/grabber_disabled = ExtResource("3_dpxxq")
theme_override_styles/slider = SubResource("StyleBoxFlat_32shs")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_7ds4v")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_0rbjs")
min_value = -60.0
max_value = 0.0
value = -60.0
scrollable = false

[node name="Label2" type="Label" parent="SettingsMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.584314, 0.882353, 1)
theme_override_font_sizes/font_size = 56
text = "SFX Volume"
horizontal_alignment = 1

[node name="SFXSlider" type="HSlider" parent="SettingsMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_icons/grabber = ExtResource("3_dpxxq")
theme_override_icons/grabber_highlight = ExtResource("2_8wuif")
theme_override_icons/grabber_disabled = ExtResource("3_dpxxq")
theme_override_styles/slider = SubResource("StyleBoxFlat_32shs")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_7ds4v")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_0rbjs")
min_value = -60.0
max_value = 0.0
value = -60.0

[node name="BackBtn" type="Button" parent="SettingsMenu"]
top_level = true
layout_mode = 0
offset_left = 2020.0
offset_top = 600.0
offset_right = 2520.0
offset_bottom = 700.0
pivot_offset = Vector2(250, 0)
focus_mode = 0
theme = SubResource("Theme_mg802")
theme_override_styles/normal = SubResource("StyleBoxTexture_om3nx")
theme_override_styles/hover = SubResource("StyleBoxTexture_f3f3q")
text = "Menu"

[node name="FolderBtn" type="Button" parent="SettingsMenu"]
top_level = true
layout_mode = 0
offset_left = 2600.0
offset_top = 600.0
offset_right = 3100.0
offset_bottom = 700.0
pivot_offset = Vector2(250, 0)
focus_mode = 0
theme = SubResource("Theme_mg802")
theme_override_styles/normal = SubResource("StyleBoxTexture_cdsw3")
theme_override_styles/hover = SubResource("StyleBoxTexture_1gb3w")
text = "Songs in folder"

[node name="PanelContainer2" type="PanelContainer" parent="SettingsMenu"]
z_index = 1
layout_mode = 2
offset_left = 2582.05
offset_top = 100.0
offset_right = 3082.05
offset_bottom = 496.0
theme_override_styles/panel = SubResource("StyleBoxFlat_pufor")

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu/PanelContainer2"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="SettingsMenu/PanelContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.584314, 0.882353, 1)
theme_override_font_sizes/font_size = 56
text = "Video Settings"
horizontal_alignment = 1

[node name="CheckBox" type="CheckBox" parent="SettingsMenu/PanelContainer2/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 40
theme_override_icons/checked = ExtResource("10_wteo5")
theme_override_icons/unchecked = ExtResource("9_nscxd")
button_pressed = true
text = "Enable Particles"

[node name="AudioVisualizer" parent="." instance=ExtResource("2_i2jmd")]

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="Transition" parent="." instance=ExtResource("5_sunvn")]

[node name="SFX" type="AudioStreamPlayer" parent="."]
bus = &"SFX"
script = ExtResource("9_nrjcv")

[node name="Stars-26430891920" type="Sprite2D" parent="."]
self_modulate = Color(0.118581, 0.118581, 0.118581, 1)
z_index = -5
position = Vector2(1920, 1280)
scale = Vector2(2, 2)
texture = ExtResource("11_6wrgr")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(1920, 540)
emitting = false
amount = 75
lifetime = 5.0
texture = ExtResource("11_00ocf")
emission_shape = 3
emission_rect_extents = Vector2(1920, 540)
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
orbit_velocity_min = -0.01
orbit_velocity_max = 0.01
scale_amount_min = 0.1
scale_amount_max = 0.7
scale_amount_curve = SubResource("Curve_m50uh")
color_initial_ramp = SubResource("Gradient_ji7bp")

[node name="BlackHole" parent="." instance=ExtResource("14_2vgnf")]
visible = false
position = Vector2(965, 181)

[connection signal="button_down" from="Buttons/PlayBtn" to="." method="_on_play_btn_button_down"]
[connection signal="mouse_entered" from="Buttons/PlayBtn" to="SFX" method="hover"]
[connection signal="button_down" from="Buttons/EditBtn" to="." method="_on_edit_btn_button_down"]
[connection signal="mouse_entered" from="Buttons/EditBtn" to="SFX" method="hover"]
[connection signal="button_down" from="Buttons/SettingsBtn" to="." method="_on_settings_btn_button_down"]
[connection signal="mouse_entered" from="Buttons/SettingsBtn" to="SFX" method="hover"]
[connection signal="button_down" from="Buttons/QuitBtn" to="." method="_on_quit_btn_button_down"]
[connection signal="mouse_entered" from="Buttons/QuitBtn" to="SFX" method="hover"]
[connection signal="value_changed" from="SettingsMenu/PanelContainer/VBoxContainer/MasterSlider" to="SettingsMenu" method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="SettingsMenu/PanelContainer/VBoxContainer/MusicSlider" to="SettingsMenu" method="_on_music_slider_value_changed"]
[connection signal="drag_ended" from="SettingsMenu/PanelContainer/VBoxContainer/SFXSlider" to="SettingsMenu" method="_on_sfx_slider_drag_ended"]
[connection signal="value_changed" from="SettingsMenu/PanelContainer/VBoxContainer/SFXSlider" to="SettingsMenu" method="_on_sfx_slider_value_changed"]
[connection signal="button_down" from="SettingsMenu/BackBtn" to="." method="_on_back_btn_button_down"]
[connection signal="mouse_entered" from="SettingsMenu/BackBtn" to="SFX" method="hover"]
[connection signal="button_down" from="SettingsMenu/FolderBtn" to="SettingsMenu" method="_on_folder_btn_button_down"]
[connection signal="mouse_entered" from="SettingsMenu/FolderBtn" to="SFX" method="hover"]
[connection signal="button_down" from="SettingsMenu/PanelContainer2/VBoxContainer/CheckBox" to="SettingsMenu" method="_on_check_box_button_down"]
[connection signal="button_down" from="SettingsMenu/PanelContainer2/VBoxContainer/CheckBox" to="SFX" method="hover"]
